Added numeric input

--- a/LiveTest/LiveTest.Client/Pages/Forms.razor
+++ b/LiveTest/LiveTest.Client/Pages/Forms.razor
@@ -9,12 +9,7 @@
     <TnTColumn S="6">
         <TnTForm Model="@Model" FormType="FormType.Outlined" FormName="Form2">
             <DataAnnotationsValidator />
-            @_renderTextFields
-            @_renderCheckboxFields
-            @_renderSwitchFields
-            @_renderDateFields
-            @_renderTimeFields
-            @_renderDateTimeFields
+            @_renderNumberFields
             <TnTButton Title="Submit" Type="ButtonType.Submit">
                 Submit
             </TnTButton>
@@ -23,12 +18,7 @@
     <TnTColumn S="6">
         <TnTForm Model="@Model" FormType="FormType.Filled" FormName="Form3">
             <DataAnnotationsValidator />
-            @_renderTextFields
-            @_renderCheckboxFields
-            @_renderSwitchFields
-            @_renderDateFields
-            @_renderTimeFields
-            @_renderDateTimeFields            
+            @_renderNumberFields
             <TnTButton Title="Submit" Type="ButtonType.Submit">
                 Submit
             </TnTButton>
@@ -45,6 +35,7 @@
     private RenderFragment _renderDateFields;
     private RenderFragment _renderTimeFields;
     private RenderFragment _renderDateTimeFields;
+    private RenderFragment _renderNumberFields;
 
     [SupplyParameterFromForm]
     public InputClass Model { get; set; } = new();
@@ -84,6 +75,14 @@
 
         [Required]
         public DateTime? DateTimeValue { get; set; }
+
+        [Required]
+        [Range(1, 10)]
+        public int IntValue { get; set; }
+
+        [Required]
+        [Range(0.9, 10.1)]
+        public double DoubleValue { get; set; }
     }
 
 
@@ -94,6 +93,7 @@
         _renderDateFields = RenderDateFields;
         _renderTimeFields = RenderTimeFields;
         _renderDateTimeFields = RenderDateTimeFields;
+        _renderNumberFields = RenderNumberFields;
     }
 
     private void RenderTextFields(RenderTreeBuilder __builder) {
@@ -680,5 +680,137 @@
         <TnTDateTimeInput @bind-Value="@Model.DateTimeValue" EndIcon="search" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DateTimeValue)" />
         <TnTDateTimeInput @bind-Value="@Model.DateTimeValue" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DateTimeValue)" />
         <TnTDateTimeInput @bind-Value="@Model.DateTimeValue" EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DateTimeValue)" />
+    }
+
+    private void RenderNumberFields(RenderTreeBuilder __builder) {
+        <TnTNumericInput @bind-Value="@Model.IntValue"  />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Label="@nameof(Model.IntValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Label="@nameof(Model.IntValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Label="@nameof(Model.IntValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Label="@nameof(Model.IntValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+        <TnTNumericInput @bind-Value="@Model.IntValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.IntValue)" />
+
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Label="@nameof(Model.DoubleValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Label="@nameof(Model.DoubleValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Label="@nameof(Model.DoubleValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Label="@nameof(Model.DoubleValue)" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
+        <TnTNumericInput @bind-Value="@Model.DoubleValue"  EndIcon="search" SupportingText="Supporting Text" StartIcon="home" Placeholder="Placeholder" Disabled="true" Label="@nameof(Model.DoubleValue)" />
     }
 }
