Added input file

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
             <TnTSideNavListItem Icon="add_circle" Label="Segmented Buttons" Href="segmentedButton" />
             <TnTSideNavListItem Icon="search" Label="Cards" Href="card" />
             <TnTSideNavListItem Icon="settings" Label="Forms" Href="forms" />
-            <TnTSideNavListItem Icon="warning" Label="Options" Href="options" />
+            <TnTSideNavListItem Icon="warning" Label="Upload File" Href="upload" />
         </TnTSideNavList>
     </SideNav>
 
