--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,17 +1,4 @@
 ﻿@import 'Common/_common.scss';
-@import 'Common/_default_typeography.scss';
-@import 'Common/_layout.scss';
-//@import 'Components/_body.scss';
-@import 'Components/_buttons.scss';
-@import 'Components/_card.scss';
-@import 'Components/_form.scss';
-//@import 'Components/_dialogcontainer.scss';
-//@import 'Components/_grid.scss';
-//@import 'Components/_header.scss';
-//@import 'Components/_sidenav.scss';
-//@import 'Components/_stack.scss';
-//@import 'Components/_tabview.scss';
-//@import 'Components/forms/_form.scss';
 
 //* {
 //    font-family: 'Roboto', sans-serif;
@@ -32,3 +19,25 @@
 html, body {
     background-color: $tnt-color-background;
 }
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: $tnt-color-on-background;
+}
+
+@import 'Common/_default_typeography.scss';
+@import 'Common/_layout.scss';
+//@import 'Components/_body.scss';
+@import 'Components/_buttons.scss';
+@import 'Components/_card.scss';
+@import 'Components/_form.scss';
+//@import 'Components/_dialogcontainer.scss';
+//@import 'Components/_grid.scss';
+//@import 'Components/_header.scss';
+//@import 'Components/_sidenav.scss';
+//@import 'Components/_stack.scss';
+//@import 'Components/_tabview.scss';
+//@import 'Components/forms/_form.scss';
