Adding and stubbing progress indicator.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -14,6 +14,7 @@
             <TnTSideNavListItem Icon="search" Label="Cards" Href="card" />
             <TnTSideNavListItem Icon="settings" Label="Forms" Href="forms" />
             <TnTSideNavListItem Icon="warning" Label="Upload File" Href="upload" />
+            <TnTSideNavListItem Icon="warning" Label="Progress Indicators" Href="progress" />
         </TnTSideNavList>
     </SideNav>
 
