--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 @import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
 @import 'Components/_form.scss';
+@import 'Components/_progress.scss';
 //@import 'Components/_dialogcontainer.scss';
 //@import 'Components/_grid.scss';
 //@import 'Components/_header.scss';
