--- a/TnTComponents/Styles/Components/_progress.scss
+++ b/TnTComponents/Styles/Components/_progress.scss
@@ -1,5 +1,4 @@
 ﻿.tnt-progress-indicator {
-
     &.linear {
         width: calc(100% - 16px);
         background-color: $tnt-color-surface-container-highest;
@@ -17,7 +16,6 @@
             background: $tnt-color-primary;
         }
 
-
         &:indeterminate {
             &:before {
                 content: "";
@@ -26,7 +24,7 @@
                 height: inherit;
                 background-color: $tnt-color-primary;
                 transform-origin: 0 0;
-                animation: indefiniteProgressBarBefore linear 5s infinite;
+                animation: indefiniteProgressBarBefore linear 3s infinite;
             }
 
             &:after {
@@ -38,7 +36,7 @@
                 top: 0;
                 left: 0;
                 transform-origin: 0 0;
-                animation: indefiniteProgressBarAfter linear 5s infinite;
+                animation: indefiniteProgressBarAfter linear 3s infinite;
             }
         }
     }
@@ -50,9 +48,9 @@
         box-sizing: border-box;
         border: none;
         border-radius: 50%;
-        padding: 0.25em;
-        width: 3em;
-        height: 3em;
+        padding: 4px;
+        width: 48px;
+        height: 48px;
         color: $tnt-color-primary;
         background-color: transparent;
         font-size: 16px;
@@ -65,11 +63,39 @@
         &:indeterminate {
             -webkit-mask-image: linear-gradient(transparent 50%, black 50%), linear-gradient(to right, transparent 50%, black 50%);
             mask-image: linear-gradient(transparent 50%, black 50%), linear-gradient(to right, transparent 50%, black 50%);
-            animation: pure-material-progress-circular 6s infinite cubic-bezier(0.3, 0.6, 1, 1);
+            animation: indefiniteProgressRing 6s infinite cubic-bezier(0.3, 0.6, 1, 1);
+
+            &:before, &::-webkit-progress-value {
+                content: "";
+                display: block;
+                box-sizing: border-box;
+                margin-bottom: 16px;
+                border: solid 4px transparent;
+                border-top-color: currentColor;
+                border-radius: 50%;
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+                animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
+            }
+
+            &::-moz-progress-bar {
+                box-sizing: border-box;
+                border: solid 4px transparent;
+                border-top-color: currentColor;
+                border-radius: 50%;
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+                animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
+            }
+
+            &::-ms-fill {
+                animation-name: -ms-ring;
+            }
         }
     }
 }
-
 
 @keyframes indefiniteProgressBarBefore {
     0% {
@@ -107,95 +133,69 @@
     }
 }
 
-
-
-
-
-
-:-ms-lang(x), .tnt-progress-indicator.ring:indeterminate {
-    animation: none;
-}
-
-.tnt-progress-indicator.ring:indeterminate::before,
-.tnt-progress-indicator.ring:indeterminate::-webkit-progress-value {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    margin-bottom: 0.25em;
-    border: solid 0.25em transparent;
-    border-top-color: currentColor;
-    border-radius: 50%;
-    width: 100% !important;
-    height: 100%;
-    background-color: transparent;
-    animation: pure-material-progress-circular-pseudo 0.75s infinite linear alternate;
-}
-
-.tnt-progress-indicator.ring:indeterminate::-moz-progress-bar {
-    box-sizing: border-box;
-    border: solid 0.25em transparent;
-    border-top-color: currentColor;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    animation: pure-material-progress-circular-pseudo 0.75s infinite linear alternate;
-}
-
-.tnt-progress-indicator.ring:indeterminate::-ms-fill {
-    animation-name: -ms-ring;
-}
-
-@keyframes pure-material-progress-circular {
+@keyframes indefiniteProgressRing {
     0% {
         transform: rotate(0deg);
     }
+
     12.5% {
         transform: rotate(180deg);
         animation-timing-function: linear;
     }
+
     25% {
         transform: rotate(630deg);
     }
+
     37.5% {
         transform: rotate(810deg);
         animation-timing-function: linear;
     }
+
     50% {
         transform: rotate(1260deg);
     }
+
     62.5% {
         transform: rotate(1440deg);
         animation-timing-function: linear;
     }
+
     75% {
         transform: rotate(1890deg);
     }
+
     87.5% {
         transform: rotate(2070deg);
         animation-timing-function: linear;
     }
+
     100% {
         transform: rotate(2520deg);
     }
 }
 
-@keyframes pure-material-progress-circular-pseudo {
+@keyframes indefiniteProgressRingPseudo {
     0% {
         transform: rotate(-30deg);
     }
+
     29.4% {
         border-left-color: transparent;
     }
+
     29.41% {
         border-left-color: currentColor;
     }
+
     64.7% {
         border-bottom-color: transparent;
     }
+
     64.71% {
         border-bottom-color: currentColor;
     }
+
     100% {
         border-left-color: currentColor;
         border-bottom-color: currentColor;
