--- a/TnTComponents/Styles/Components/_progress.scss
+++ b/TnTComponents/Styles/Components/_progress.scss
@@ -94,6 +94,41 @@
                 animation-name: -ms-ring;
             }
         }
+
+        &:not(:indeterminate) {
+            border-radius: 50%;
+            background: linear-gradient(red,purple,orange);
+            -webkit-mask: radial-gradient(transparent 89px,#000 90px);
+            mask: radial-gradient(transparent 89px,#000 90px); //-webkit-mask-image: radial-gradient(circle at center, transparent 80%, black 100%);
+            //mask-image: linear-gradient(transparent 50%, red 50%), linear-gradient(to right, transparent 50%, black 50%);
+            //animation: indefiniteProgressRing 6s infinite cubic-bezier(0.3, 0.6, 1, 1);
+            //&:before, &::-webkit-progress-value {
+            //    content: "";
+            //    display: block;
+            //    box-sizing: border-box;
+            //    margin-bottom: 16px;
+            //    border: solid 4px $tnt-color-primary;
+            //    border-radius: 50%;
+            //    width: 100%;
+            //    height: 100%;
+            //    background-color: transparent;
+            //    //animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
+            //}
+            //
+            //&::-moz-progress-bar {
+            //    box-sizing: border-box;
+            //    border: solid 4px $tnt-color-primary;
+            //    border-radius: 50%;
+            //    width: 100%;
+            //    height: 100%;
+            //    background-color: transparent;
+            //    //animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
+            //}
+            //
+            //&::-ms-fill {
+            //    animation-name: -ms-ring;
+            //}
+        }
     }
 }
 
