Added ring progress indicator

--- a/LiveTest/LiveTest.Client/Components/ProgressWithSetPercentage.razor
+++ b/LiveTest/LiveTest.Client/Components/ProgressWithSetPercentage.razor
@@ -1,7 +1,7 @@
 ﻿@rendermode InteractiveAuto
 
-<TnTComponents.ProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Ring" Max="100" Value="@_progressValue" />
-<TnTComponents.ProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Linear" Max="100" Value="@_progressValue" />
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Ring" Max="100" Value="@_progressValue" />
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Linear" Max="100" Value="@_progressValue" />
 
 @code {
     private int _progressValue = 0;
