--- a/TnTComponents/TnTProgressIndicator.razor
+++ b/TnTComponents/TnTProgressIndicator.razor
@@ -3,7 +3,7 @@
           max="@Max"
           value="@Value"
           class="@GetClass()"
-          style="@Style"
+          style="@GetStyle()"
           theme="@Theme">
     @ChildContent
 </progress>
