--- a/LiveTest/LiveTest.Client/Pages/Progress.razor
+++ b/LiveTest/LiveTest.Client/Pages/Progress.razor
@@ -4,8 +4,8 @@
     Static
 </h3>
 
-<TnTComponents.ProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Ring" />
-<TnTComponents.ProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Linear" />
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Ring" />
+<TnTComponents.TnTProgressIndicator Appearance="TnTComponents.Enum.ProgressAppearance.Linear" />
 
 <h3>
     Interactive
