--- a/TnTComponents/Styles/Components/_progress.scss
+++ b/TnTComponents/Styles/Components/_progress.scss
@@ -60,6 +60,18 @@
             background-color: transparent;
         }
 
+        &::-ms-fill {
+            animation-name: -ms-ring;
+        }
+
+        &::-moz-progress-bar {
+            background: transparent;
+        }
+
+        &::-webkit-progress-value {
+            background: transparent;
+        }
+
         &:indeterminate {
             -webkit-mask-image: linear-gradient(transparent 50%, black 50%), linear-gradient(to right, transparent 50%, black 50%);
             mask-image: linear-gradient(transparent 50%, black 50%), linear-gradient(to right, transparent 50%, black 50%);
@@ -89,45 +101,15 @@
                 background-color: transparent;
                 animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
             }
-
-            &::-ms-fill {
-                animation-name: -ms-ring;
-            }
         }
 
         &:not(:indeterminate) {
-            border-radius: 50%;
-            background: linear-gradient(red,purple,orange);
-            -webkit-mask: radial-gradient(transparent 89px,#000 90px);
-            mask: radial-gradient(transparent 89px,#000 90px); //-webkit-mask-image: radial-gradient(circle at center, transparent 80%, black 100%);
-            //mask-image: linear-gradient(transparent 50%, red 50%), linear-gradient(to right, transparent 50%, black 50%);
-            //animation: indefiniteProgressRing 6s infinite cubic-bezier(0.3, 0.6, 1, 1);
-            //&:before, &::-webkit-progress-value {
-            //    content: "";
-            //    display: block;
-            //    box-sizing: border-box;
-            //    margin-bottom: 16px;
-            //    border: solid 4px $tnt-color-primary;
-            //    border-radius: 50%;
-            //    width: 100%;
-            //    height: 100%;
-            //    background-color: transparent;
-            //    //animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
-            //}
-            //
-            //&::-moz-progress-bar {
-            //    box-sizing: border-box;
-            //    border: solid 4px $tnt-color-primary;
-            //    border-radius: 50%;
-            //    width: 100%;
-            //    height: 100%;
-            //    background-color: transparent;
-            //    //animation: indefiniteProgressRingPseudo 750ms infinite linear alternate;
-            //}
-            //
-            //&::-ms-fill {
-            //    animation-name: -ms-ring;
-            //}
+            background-color: $tnt-color-primary;
+            -webkit-mask: radial-gradient(circle, transparent 0 16px, black 18px 100%);
+            mask: radial-gradient(circle, transparent 0 16px, black 18px 100%);
+            width: 44px;
+            height: 44px;
+            padding: 16px;
         }
     }
 }
