--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -5,7 +5,7 @@
 
 <TnTRow>
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" EndIcon="home">
                 Button
             </TnTButton>
@@ -24,7 +24,7 @@
         </TnTStack>
     </TnTColumn>
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" EndIcon="home" Disabled="true">
                 Button
             </TnTButton>
@@ -44,7 +44,7 @@
     </TnTColumn>
 
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search">
                 Button
             </TnTButton>
@@ -64,7 +64,7 @@
     </TnTColumn>
 
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" Disabled="true">
                 Button
             </TnTButton>
@@ -84,7 +84,7 @@
     </TnTColumn>
 
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" EndIcon="home">
                 Button
             </TnTButton>
@@ -103,7 +103,7 @@
         </TnTStack>
     </TnTColumn>
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" EndIcon="home" Disabled="true">
                 Button
             </TnTButton>
@@ -123,7 +123,7 @@
     </TnTColumn>
 
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated">
                 Button
             </TnTButton>
@@ -142,7 +142,7 @@
         </TnTStack>
     </TnTColumn>
     <TnTColumn>
-        <TnTStack Direction="StackDirection.Horizontal">
+        <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" Disabled="true">
                 Button
             </TnTButton>
