--- a/LiveTest/LiveTest.Client/Pages/Cards.razor
+++ b/LiveTest/LiveTest.Client/Pages/Cards.razor
@@ -14,6 +14,7 @@
                         @j
                     </TnTCard>
                 </TnTColumn>
+                <TnTDivider Orientation="Orientation.Vertical" />
             }
             else {
                 var l = 12 - k;
@@ -24,11 +25,10 @@
                 </TnTColumn>
             }
         }
-        </TnTRow>
+    </TnTRow>
     UpdateCardType();
 }
-<br />
-<br />
+<TnTDivider />
 @for (var i = 0; i < 12; ++i) {
     var j = i + 1;
     var k = 0;
@@ -43,11 +43,10 @@
                 </TnTColumn>
             }
         }
-        </TnTRow>
+    </TnTRow>
     UpdateCardType();
 }
-<br />
-<br />
+<TnTDivider />
 @for (var i = 0; i < 12; ++i) {
     var j = i + 1;
     var k = 0;
@@ -62,11 +61,10 @@
                 </TnTColumn>
             }
         }
-        </TnTRow>
+    </TnTRow>
     UpdateCardType();
 }
-<br />
-<br />
+<TnTDivider />
 @for (var i = 0; i < 12; ++i) {
     var j = i + 1;
     var k = 0;
@@ -81,11 +79,10 @@
                 </TnTColumn>
             }
         }
-        </TnTRow>
+    </TnTRow>
     UpdateCardType();
 }
-<br />
-<br />
+<TnTDivider />
 @for (var i = 0; i < 12; ++i) {
     var j = i + 1;
     var k = 0;
@@ -112,7 +109,7 @@
                 </TnTColumn>
             }
         }
-        </TnTRow>
+    </TnTRow>
     UpdateCardType();
 }
 
