--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,21 +1,5 @@
 ﻿@import 'Common/_common.scss';
 
-//* {
-//    font-family: 'Roboto', sans-serif;
-//}
-
-//html, body {
-//    margin: 0px;
-//    height: 100%;
-//    scrollbar-width: none;
-//    -ms-overflow-style: none;
-
-//    &::-webkit-scrollbar {
-//        background: transparent;
-//        width: 0px;
-//    }
-//}
-
 html, body {
     background-color: $tnt-color-background;
 }
@@ -30,15 +14,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @import 'Common/_default_typeography.scss';
 @import 'Common/_layout.scss';
-//@import 'Components/_body.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_card.scss';
+@import 'Components/_divider.scss';
 @import 'Components/_form.scss';
 @import 'Components/_progress.scss';
-//@import 'Components/_dialogcontainer.scss';
-//@import 'Components/_grid.scss';
-//@import 'Components/_header.scss';
-//@import 'Components/_sidenav.scss';
-//@import 'Components/_stack.scss';
-//@import 'Components/_tabview.scss';
-//@import 'Components/forms/_form.scss';
